--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
@@ -36,6 +39,7 @@
         <activity android:name=".activities.ContractorDetailActivity"/>
         <activity android:name=".activities.PublicationActivity"/>
         <activity android:name=".activities.MyAdsActivity"/>
+        <activity android:name=".activities.NearbyAdsActivity"/>
 
     </application>
 </manifest>
