arregla bug de cambios, chatbot y cerrajeria

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -48,6 +48,8 @@
         <activity android:name=".activities.RecoverPasswordActivity" />
         <activity android:name=".activities.EditProfileActivity"/>
         <activity android:name=".activities.EditClientProfileActivity"/>
+        <activity android:name=".activities.ChatActivity"/>
+
 
 
     </application>
