modificar formulario de registro de contratistas

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
         <activity android:name=".activities.EditProfileActivity"/>
         <activity android:name=".activities.EditClientProfileActivity"/>
         <activity android:name=".activities.ChatActivity"/>
+        <activity android:name=".activities.EditAdActivity"/>
 
 
 
