--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
     <uses-permission android:name="android.permission.INTERNET"/>
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
     <uses-permission android:name="android.permission.VIBRATE"/>
+    <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:name=".MyApplication"
@@ -35,6 +36,7 @@
             </intent-filter>
         </activity>
 
+
         <activity android:name=".activities.LoginActivity"/>
         <activity android:name=".activities.RegisterContractorActivity" />
         <activity android:name=".activities.RegisterClientActivity" />
@@ -50,6 +52,12 @@
         <activity android:name=".activities.EditClientProfileActivity"/>
         <activity android:name=".activities.ChatActivity"/>
         <activity android:name=".activities.EditAdActivity"/>
+        <activity android:name=".activities.ScannerActivity" />
+
+        <activity
+            android:name="com.journeyapps.barcodescanner.CaptureActivity"
+            android:screenOrientation="fullSensor"
+            tools:replace="android:screenOrientation" />
 
 
 
